--- a/scripts/docker-compose-separated.yaml
+++ b/scripts/docker-compose-separated.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   web:
-    image: obsprops:latest
+    image: hylkevds/frost-http-observableproperties:latest
     ports:
       - 8080:8080
     depends_on:
